<resources>
    <string name="app_name">GreenBotPrikolist</string>
    <string name="hello_comrade">Hello, Comrade!</string>
    <string name="hello">Hello!</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="hello_world">Hello World!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="alredy_have_an_account">Alredy have an account</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="add_new_note">Add new note</string>
    <string name="title">Title</string>
    <string name="context">Context</string>
    <string name="notes">Notes</string>
    <string name="note_title">note title</string>
    <string name="note_content">note content</string>
    <string name="note_time">note time</string>
    <string name="delite_note">Delite note</string>
    <string name="search">search</string>
    <string name="add_new_deck">Add new deck</string>
    <string name="deck_name">Deck name</string>
    <string name="deck_format">Deck format</string>
    <string name="creature">creature</string>
    <string name="land">land</string>
    <string name="sorcery">sorcery</string>
    <string name="artifact">artifact</string>
    <string name="deck_time">deck time</string>
    <string name="decks">Decks</string>
    <string name="game">Game!</string>
    <string name="creature_card">creature card %</string>
    <string name="sorcery_card">sorcery card %</string>
    <string name="land_card">land card %</string>
    <string name="artifact_card">artifact card %</string>
    <string name="win_count">win count</string>
    <string name="lose_count">lose count</string>
    <string name="delete_deck">Delete deck</string>
</resources>