<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    android:background="@drawable/rounded_corner"
    android:padding="12dp"
    android:layout_marginVertical="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deck_name"
        android:id="@+id/deck_name_text_view"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginVertical="4dp"/>

    <TextView
        android:id="@+id/deck_format_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/deck_format"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creature"
        android:id="@+id/creature_text_view"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginVertical="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/land"
        android:id="@+id/land_text_view"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginVertical="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorcery"
        android:id="@+id/sorcery_text_view"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginVertical="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artifact"
        android:id="@+id/artifact_text_view"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginVertical="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deck_time"
        android:id="@+id/timestamp_note_text_view"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="right"
        android:layout_marginVertical="4dp"/>

</LinearLayout>