<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16sp"
    tools:context=".NoteDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:text="@string/add_new_deck"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/save_deck_btn"
            android:src="@drawable/baseline_done_outline_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/black"
            app:tint="@color/white"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:orientation="vertical"
        android:padding="16sp"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deck_name_text"
            android:hint="@string/deck_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deck_format_text"
            android:hint="@string/deck_format"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            tools:ignore="LabelFor" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/creature_text"
            android:hint="@string/creature"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            tools:ignore="LabelFor" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/land_text"
            android:hint="@string/land"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            tools:ignore="LabelFor" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sorcery_text"
            android:hint="@string/sorcery"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            tools:ignore="LabelFor" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/artifact_text"
            android:hint="@string/artifact"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delite_note"
        android:textColor="@color/white"
        android:id="@+id/delete_note_text_btn"
        android:textStyle="bold"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>


</RelativeLayout>